# neev

./: .gitignore  README.md  pyproject.toml  setup.md  setup.py
model/: __init__.py
neev.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: __init__.py  data_preprocess.py  train.py
src/data/: HFTokenizer.py  __init__.py  binarizer.py  tokenizer.py
src/model/: Attention.py  Decoder.py  DecoderBlock.py  FeedForward.py  MultiHeadAttention.py  Normalizations.py  PositionalEncoding.py  __init__.py
src/utils/: args_parser.py  config_parser.py  misc.py
utils/: args_parser.py  config_parser.py
