[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shodh-neev"
version = "0.1.0"
description = "An end to end solution to train and deploy your own language models."
authors = [
    { name = "Harshit Sandilya", email = "harshit@shodh.ai" },
    { name = "Jatin Thakur" },
]
license = { file = "LICENCE" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = ['protobuf>=3.20.2', 'pytorch_lightning', 'tensorboard']
